resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_size_info-12.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---
class resym_test::PureVirtualClassSpecialized : public resym_test::PureVirtualClass {
  /* 0x0000: fields for resym_test::PureVirtualClass */
  
  private: int32_t OtherMethod();
  public: PureVirtualClassSpecialized(resym_test::PureVirtualClassSpecialized&&);
  public: PureVirtualClassSpecialized(const resym_test::PureVirtualClassSpecialized&);
  public: PureVirtualClassSpecialized();
  public: resym_test::PureVirtualClassSpecialized& operator=(resym_test::PureVirtualClassSpecialized&&);
  public: resym_test::PureVirtualClassSpecialized& operator=(const resym_test::PureVirtualClassSpecialized&);
};
