resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_size_info-13.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---
class resym_test::InterfaceImplClass : public resym_test::PureVirtualClass {
  /* 0x0000: fields for resym_test::PureVirtualClass */
  
  private: virtual int32_t InterfaceVirtual();
  public: InterfaceImplClass(resym_test::InterfaceImplClass&&);
  public: InterfaceImplClass(const resym_test::InterfaceImplClass&);
  public: InterfaceImplClass();
  public: resym_test::InterfaceImplClass& operator=(resym_test::InterfaceImplClass&&);
  public: resym_test::InterfaceImplClass& operator=(const resym_test::InterfaceImplClass&);
};
