resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_size_info-16.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---
struct resym_test::BigOffsetsStruct {
  /* 0x0000 */ char a[65536];
  /* 0x10000 */ char b[65536];
};
