resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_size_info-17.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---
union resym_test::BitFieldsTest3 {
  /* 0x0000 */ uint32_t b1 : 1; /* BitPos=0 */
  /* 0x0000 */ uint32_t b2 : 1; /* BitPos=0 */
  /* 0x0000 */ uint32_t b3 : 30; /* BitPos=0 */
};
